[tool.poetry]
name = "reddyt"
version = "0.1.0"
description = "Automate the process of creating videos from Reddit stories."
authors = ["Edward Pasenidis <40323691+pasenidis@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
